# unlimited

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.github/workflows/: rust.yml
res/: default_input_map.json  default_layout.json  find-mode-trigger.json  help_screen.txt  welcome_screen.txt
res/input-map/: find-mode-input-map.json  goto-line-mode-input-map.json  goto-line-mode-trigger.json  main-input-map.json  open-doc-mode-input-map.json  open-doc-mode-trigger.json
src/: lib.rs  main.rs
src/core/: buffer.rs  bufferlog.rs  byte_buffer.rs  codepointinfo.rs  config.rs  document.rs  editor.rs  error.rs  event.rs  macros.rs  mapped_file.rs  mapped_file_internal_tree.dot  mark.rs  mod.rs  screen.rs  server.rs  text_codec.rs  view.rs
src/core/buffer/: buffer.rs  bufferlog.rs  inner.rs  mod.rs
src/core/codec/: mod.rs
src/core/codec/text/: ascii.rs  mod.rs  utf8.rs
src/core/document/: buffer.rs  bufferlog.rs  document.rs  inner.rs  mod.rs
src/core/editor/: editor.rs  env.rs  mod.rs
src/core/event/: input_map.rs  mod.rs
src/core/mapped_file/: mapped_file_internal_tree.dot  mod.rs  test.rs
src/core/modes/: basic_editor.rs  core_mode.rs  dir_fetch.rs  dir_mode.rs  empty_line_mode.rs  find_mode.rs  goto_line_mode.rs  hsplit_mode.rs  line_number.rs  mod.rs  mode_template.rs  open_doc.rs  side_bar_mode.rs  simple_view.rs  status_line_mode.rs  tab_bar_mode.rs  text_mode.rs  title_bar_mode.rs  vscrollbar_mode.rs  vsplit_mode.rs
src/core/modes/find_mode/: mod.rs
src/core/modes/goto_line_mode/: mod.rs
src/core/modes/status_mode/: mod.rs  status_mode.rs
src/core/modes/text_mode/: char_map.rs  data_fetch.rs  draw_mark.rs  highlight_keywords.rs  highlight_selection.rs  highlight_selection_overlay.rs  mark.rs  mod.rs  raw_data_filter.rs  ruler.rs  screen_filler.rs  show_trailing_spaces.rs  tab_expansion.rs  text_codec.rs  text_mode.rs  text_mode_codec.rs  unicode_to_text.rs  word_wrap.rs
src/core/screen/: line.rs  mod.rs  mod.rs.orig  screen.rs
src/core/text/codec/: utf8.rs
src/core/view/: layout.rs  mod.rs  view.rs  view_mode.rs
src/ui/: mod.rs
src/ui/graphical/: mod.rs  sdl2.rs
src/ui/terminal/: crossterm.rs  mod.rs  termion.rs
src/ui/terminal/crossterm/: mod.rs
src/ui/terminal/ncurses/: mod.rs
src/ui/terminal/termion/: mod.rs
test-tools/: crossterm-input-test.rs  gen_lines.rs  gen_utf8.rs  test_screen.rs
(+1 files in other folders)
