[package]
name = "unlimited"
version = "0.0.5-dev"
authors = ["Carl-Erwin Griffith <carl.erwin@gmail.com>"]
edition = "2018"

[[bin]]
doc = false
name = "unlimited"
path = "src/main.rs"


[dependencies]
libc = "*"
rand = "0.5.0"

clap = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

termion = "*"
crossterm = { git = "https://github.com/crossterm-rs/crossterm" , branch = "0.19" }


[profile.release]
lto = true
debug = true
opt-level = 3
panic = "abort"


[profile.dev]
panic = "abort"
