[package]
name = "unlimited"
version = "0.0.5-dev"
authors = ["Carl-Erwin Griffith <carl.erwin@gmail.com>"]
license = "MIT"

edition = "2018"

[[bin]]
doc = false
name = "unlimited"
path = "src/main.rs"


[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11"
libc = "0.2.*"
rand = "0.5.0"
clap = "2.33.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#crossterm = { git = "https://github.com/crossterm-rs/crossterm" , branch = "0.20" }
crossterm = { git = "https://github.com/carl-erwin/crossterm" , branch = "sigterm-handler" }
unicode-width = "0.1.8"
utf8parse = "0.2.0"

[profile.release]
debug = true
opt-level = 3
panic = "abort"
lto = "fat"


[profile.dev]
#panic = "abort"
