[package]
name = "unlimited"
version = "0.0.8-dev"
authors = ["Carl-Erwin Griffith <carl.erwin@gmail.com>"]
license = "MIT"

edition = "2021"

[[bin]]
doc = false
name = "unlimited"
path = "src/main.rs"

[[test]]
doc = false
name = "gen_lines"
path = "test-tools/gen_lines.rs"

[[test]]
doc = false
name = "gen_utf8"
path = "test-tools/gen_utf8.rs"

[[test]]
doc = false
name = "test_screen"
path = "test-tools/test_screen.rs"


[features]
gfx-sdl = ["dep:sdl2", "dep:gl"]

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.1"
libc = "0.2.*"
rand = "0.9.0"
clap = "4.3.3"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
bitflags = "2.6.0"
crossterm = { version = "0.29", features = [ "events", "bracketed-paste" ] }

sdl2 = { version = "0.37.0", optional = true }

gl = { version = "0.14.0", optional = true }


unicode-width = "0.2.0"
utf8parse = "0.2.0"
regex = "1.5.5"

[profile.release]
debug = true
opt-level = 3
panic = "abort"
#lto = "fat"


[profile.dev]
panic = "abort"
